--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,8 +10,7 @@ header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
+    'hamburger brand tools' var(--nav-height) 'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
   gap: 0 24px;
   margin: auto;
@@ -23,14 +22,13 @@ header nav {
 
 header nav[aria-expanded='true'] {
   grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
+    'hamburger brand' var(--nav-height) 'sections sections' 1fr
     'tools tools' var(--nav-height) / auto 1fr;
   overflow-y: auto;
   min-height: 100dvh;
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   header nav {
     display: flex;
     justify-content: space-between;
@@ -128,7 +126,7 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
   transform: rotate(-45deg);
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   header nav .nav-hamburger {
     display: none;
     visibility: hidden;
@@ -169,19 +167,19 @@ header nav .nav-sections ul {
   font-size: var(--body-font-size-s);
 }
 
-header nav .nav-sections ul > li {
+header nav .nav-sections ul>li {
   font-weight: 500;
 }
 
-header nav .nav-sections ul > li > ul {
+header nav .nav-sections ul>li>ul {
   margin-top: 0;
 }
 
-header nav .nav-sections ul > li > ul > li {
+header nav .nav-sections ul>li>ul>li {
   font-weight: 400;
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   header nav .nav-sections {
     display: block;
     visibility: visible;
@@ -224,17 +222,17 @@ header nav .nav-sections ul > li > ul > li {
     margin: 0;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li {
+  header nav .nav-sections .default-content-wrapper>ul>li {
     flex: 0 1 auto;
     position: relative;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul {
     display: none;
     position: relative;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
+  header nav .nav-sections .default-content-wrapper>ul>li[aria-expanded='true']>ul {
     display: block;
     position: absolute;
     left: -24px;
@@ -245,7 +243,7 @@ header nav .nav-sections ul > li > ul > li {
     white-space: initial;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul::before {
     content: '';
     position: absolute;
     top: -8px;
@@ -257,7 +255,7 @@ header nav .nav-sections ul > li > ul > li {
     border-bottom: 8px solid var(--light-color);
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul>li {
     padding: 8px 0;
   }
 }
@@ -265,4 +263,59 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+}
+
+/** 
+* WKND customizations to the header 
+* 
+* These overrides can be incorporated into the provided CSS,
+* however they are included discretely in thus tutorial for clarity and ease of addition.
+* 
+* Because these are added discretely
+* - They are added to the bottom to override previous styles.
+* - They are wrapped in a header .header.block nav selector to ensure they have more specificity than the provided CSS.
+* 
+**/
+
+header .header.block nav {
+
+  /* Set the height of the logo image.
+     Chrome natively sets the width based on the images aspect ratio */
+  .nav-brand img {
+    height: calc(var(--nav-height) * .75);
+    width: auto;
+    margin-top: 5px;
+  }
+
+  .nav-sections {
+
+    /* Update menu items display properties */
+    a {
+      text-transform: uppercase;
+      background-color: transparent;
+      color: var(--text-color);
+      font-weight: 500;
+      font-size: var(--body-font-size-s);
+
+      &:hover {
+        background-color: inherit;
+      }
+    }
+
+    /* Adjust some spacing and positioning of the dropdown nav */
+    .nav-drop {
+      &::after {
+        transform: translateY(-50%) rotate(135deg);
+      }
+
+      &[aria-expanded='true']::after {
+        transform: translateY(50%) rotate(-45deg);
+      }
+
+      &>ul {
+        top: 2rem;
+        left: -1rem;
+      }
+    }
+  }
 }
